--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "autoload": {
         "psr-4": {
             "celionatti\\Voltage\\": "Volt/",
+            "celionatti\\Packages\\": "Volt/packages/",
             "Voltage\\": "./"
         }
     },
