--- a/public/.htaccess
+++ b/public/.htaccess
@@ -46,6 +46,5 @@ Options All -Indexes
 	ErrorDocument 404 index.php
 </IfModule>
 
-# Disable server signature start
-	ServerSignature Off
-# Disable server signature end
+# Disable server signature
+ServerSignature Off
